--- a/BankAccountProject/BankAccountProject.csproj
+++ b/BankAccountProject/BankAccountProject.csproj
@@ -44,11 +44,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Account.cs" />
-    <Compile Include="CheckingAccount.cs" />
+    <Compile Include="Checking.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ReserveAccount.cs" />
-    <Compile Include="SavingsAccount.cs" />
+    <Compile Include="Saving.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
