--- a/BankAccountProject/BankAccountProject.csproj
+++ b/BankAccountProject/BankAccountProject.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Checking.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Reserve.cs" />
     <Compile Include="Saving.cs" />
   </ItemGroup>
   <ItemGroup>
